--- a/config.json
+++ b/config.json
@@ -1,22 +1,29 @@
 {
-  "ej1-a": {
-      "csv": "ej1-a.csv",
-      "rerun": true
+  "pokeball_in_ideal_conditions_experiment": {
+    "csv": "data/ej1-a.csv",
+    "rerun": true
   },
-  "ej2-a": {
-      "csv": "ej2-a.csv",
-      "rerun": true,
-      "config": ["pokeball", "snorlax", 1000, 1]
+  "variating_status_experiment": {
+    "csv": "data/ej2-a.csv",
+    "rerun": true,
+    "pokemon": "snorlax",
+    "ball": "pokeball",
+    "level": 100,
+    "hp_percentage": 1,
+    "iterations": 1000
   },
-  "ej2-b": {
-      "csv": "ej2-b.csv",
-      "rerun": true,
-      "config": ["pokeball", "snorlax", 0.15, 100]
+  "variating_hp_experiment": {
+    "csv": "data/ej2-b.csv",
+    "rerun": true,
+    "ball": "pokeball",
+    "pokemon": "snorlax",
+    "noise": 0.15,
+    "iterations": 1000
   },
-  "ej2-d": {
-      "csv": "ej2-d.csv",
-      "rerun": true,
-      "config": ["caterpie", 100]
+  "variating_everything_experiment": {
+    "csv": "data/ej2-d.csv",
+    "rerun": true,
+    "pokemon": "snorlax",
+    "iterations": 1000
   }
-
 }
